# pay-2-zk-commitment

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
crates/zk-commit-core/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
crates/zk-commit-core/examples/: fibonacci.rs
crates/zk-commit-core/src/: api.rs  blockchain.rs  circuit_config.rs  circuit_utils.rs  claim_circuit.rs  claim_execution.rs  comitter.rs  commitment_tree.rs  example.rs  fibonacci.rs  groth16.rs  lib.rs  main.rs  prover.rs  recursive.rs  types.rs  utils.rs  verifier.rs
crates/zk-commit-core/src/bindings/: groth16verifier.rs  mod.rs  paycommitment.rs  testerc20.rs
crates/zk-commit-core/src/circuits/: circuit_config.rs  circuit_utils.rs  claim_circuit.rs  mod.rs
crates/zk-commit-core/src/examples/: fibonacci.rs
crates/zk-commit-core/static/abis/: Groth16Verifier.json  PayCommitment.json  TestERC20.json
crates/zk-commit-core/static/template/: template_constants.circom
crates/zk-commit-core/tests/: integration_tests.rs
crates/zk-commit-mobile/: Cargo.toml  uniffi.toml
crates/zk-commit-mobile/android/: .editorconfig  .gitignore  README.md  build.gradle.kts  secrets.defaults.properties  settings.gradle.kts
crates/zk-commit-mobile/android/app/: build.gradle.kts
crates/zk-commit-mobile/android/app/src/main/: AndroidManifest.xml
crates/zk-commit-mobile/android/app/src/main/res/values/: strings.xml  themes.xml
crates/zk-commit-mobile/android/baselineprofile/: build.gradle.kts
crates/zk-commit-mobile/android/benchmark/: build.gradle.kts
crates/zk-commit-mobile/android/build-logic/: settings.gradle.kts
crates/zk-commit-mobile/android/build-logic/convention/: build.gradle.kts
crates/zk-commit-mobile/android/core/: build.gradle.kts  consumer-rules.pro
crates/zk-commit-mobile/android/gradle/: libs.versions.toml
crates/zk-commit-mobile/android/gradle/wrapper/: gradle-wrapper.properties
crates/zk-commit-mobile/android/tools/: pre-commit  setup.sh
crates/zk-commit-mobile/ios/: README.md
crates/zk-commit-mobile/ios/ZKSimpleApp/: info.plist
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleApp/: AppDelegate.swift  ClaimListView.swift  ContentView.swift  CreateDepositorView.swift  Groth16Service.swift  Info.plist  WalletService.swift  ZKSimpleApp.entitlements  ZKSimpleAppApp.swift  ZKSimpleAppRelease.entitlements  zk_commit_mobile.swift
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleApp.xcodeproj/: project.pbxproj
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleApp.xcodeproj/xcshareddata/xcschemes/: ZKSimpleApp.xcscheme
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleApp/zk_commit_mobile.xcframework/: Info.plist
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleApp/zk_commit_mobile.xcframework/ios-arm64/: libzk_commit_mobile.dylib
crates/zk-commit-mobile/ios/ZKSimpleApp/ZKSimpleAppTests/: ZKSimpleAppTests.swift
crates/zk-commit-mobile/ios/build_ios/: info.plist
crates/zk-commit-mobile/ios/build_ios/ModuleCache.noindex/: Accessibility-252BT3M660SRB.swiftmodule  Combine-3RO5J5AK09UC3.swiftmodule  CoreData-3NRBYY3Q99FG0.swiftmodule  CoreFoundation-3MH1FR7KNOUN9.swiftmodule  CoreGraphics-X9MMFWRVX3BM.swiftmodule  CoreImage-3IHS1GR9ASUBI.swiftmodule  CoreTransferable-2E7XNOK58STKX.swiftmodule  Darwin-13ZZ8WFHH8M77.swiftmodule  DataDetection-3K0DJT190VMKC.swiftmodule  DeveloperToolsSupport-3DOVXD6NOLQF2.swiftmodule  Dispatch-6HO4Q0IAS727.swiftmodule  FileProvider-1P46NEBWTTEE1.swiftmodule  Foundation-321RNT6OUB86N.swiftmodule  Metal-5FIHRP8JI6XR.swiftmodule  OSLog-37L453BJGYWU2.swiftmodule  ObjectiveC-2Y3A5JX06E5NY.swiftmodule  Observation-3A42SI91A3903.swiftmodule  QuartzCore-6MNYFD8A4M9R.swiftmodule  Session.modulevalidation  Swift-AA1R0GYPDGMT.swiftmodule  SwiftOnoneSupport-8MTBWSQY6UWD.swiftmodule  SwiftUI-1RYYRD8FEZ2LG.swiftmodule  Symbols-1FRYA84SWDIVW.swiftmodule  UIKit-3STXXF8H0Z25F.swiftmodule  UniformTypeIdentifiers-JBLCD0XAP0U6.swiftmodule  _Concurrency-1KA0K7RYSDYKC.swiftmodule  _StringProcessing-3FBBX8HUOIS7Y.swiftmodule  os-1V1O7MCH2HU2A.swiftmodule
crates/zk-commit-mobile/ios/build_ios/ModuleCache.noindex/URAWTV8XX4AV/: Accessibility-3171UMVL6NFNS.pcm  CFNetwork-2SQ3THOIK9YZP.pcm  CoreData-26SPCQL4JXNOK.pcm  CoreFoundation-18CWDCA31ANYQ.pcm  CoreGraphics-25GAV7ON7GLQH.pcm  CoreImage-2ADU88VB0BY2P.pcm  CoreText-10OABUQM33BJ5.pcm  CoreTransferable-2KGBFPF2A5FG2.pcm  CoreVideo-72NJ3X3JO4I3.pcm  DataDetection-2ZF0G5PNWXY3K.pcm  DeveloperToolsSupport-2QUKAZKW3M77R.pcm  Dispatch-305BB16QKB1NA.pcm  FileProvider-19H7JZOTTIAIO.pcm  IOSurface-195QV55ZM2FTK.pcm  ImageIO-3756GEKLQ13FT.pcm  MachO-3JKMHEK19VCIP.pcm  Metal-3IVPCEVLZ4OC8.pcm  OSLog-2XJKNQ15M4NM2.pcm  ObjectiveC-3QS04PIKPU5HT.pcm  OpenGLES-2NNWD41DJABJH.pcm  QuartzCore-25U7NKO52RIL2.pcm  Security-3LF5CH5NVDMLJ.pcm  SwiftOverlayShims-1154XZ7D2AP7Z.pcm  SwiftShims-1154XZ7D2AP7Z.pcm  SwiftUI-2YVA8E6UXCJ4E.pcm  Symbols-17076V90MHT0H.pcm  UniformTypeIdentifiers-3DVXXYQGA694Z.pcm  UserNotifications-1F0ZJTNL5RDWG.pcm  _Builtin_stddef_max_align_t-25OOTM0E7SZ3X.pcm  _SwiftConcurrencyShims-1154XZ7D2AP7Z.pcm  os-YBB4G3B4NPRT.pcm  os_object-YBB4G3B4NPRT.pcm  os_workgroup-YBB4G3B4NPRT.pcm  ptrauth-25OOTM0E7SZ3X.pcm  zk_commit_mobileFFI-357YBWAQN8M5I.pcm  zk_commit_mobileFFI-47857LNN6B5Y.pcm
crates/zk-commit-mobile/ios/build_ios/SDKStatCaches.noindex/: iphonesimulator17.2-21C52-4f2951bfe8f3cd53c99228b0131e163e.sdkstatcache
crates/zk-commit-mobile/scripts/: build_ios.sh  run_project.sh
crates/zk-commit-mobile/src/: blockchain.rs  commitment_tree.rs  lib.rs  prover.rs  utils.rs
crates/zk-commit-service/: Cargo.toml  README.md
crates/zk-commit-service/src/: error.rs  lib.rs  main.rs  types.rs
crates/zk-commit-service/src/controllers/: mod.rs  root.rs  wrap.rs
crates/zk-commit-service/src/integration/: mod.rs  rapidsnark.rs  recursive.rs
crates/zk-commit-service/src/integration/circuits/: circuit_config.rs  mod.rs  recursive.rs
crates/zk-commit-service/src/models/: bodies.rs  mod.rs
crates/zk-commit-service/src/service/: biz.rs  groth16.rs  mod.rs
docs/: design.md  sdk-spec.md
(+188 files in other folders)
