[workspace]
members = [
    "crates/zk-commit-core",
    "crates/zk-commit-service"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/pay-2-zk-commitment.git"
repository = "https://github.com/okx/pay-2-zk-commitment.git"
keywords = ["crypto", "pay", "SNARK", "plonky2"]
categories = ["pay"]

[workspace.dependencies]
plonky2 = { git = "https://github.com/okx/plonky2" }
anyhow = { version = "1.0.40", default-features = false }
serde = "1.0.145"
serde_json = "1.0.86"
thiserror = "1.0.60"
ethers = { version = "2.0.0", features = ["ws"] }
log = "0.4.17"
env_logger = "0.9.1"
num-bigint = "0.4"