[workspace]
members = [
    "crates/zk-commit-core"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/pay-2-zk-commitment.git"
repository = "https://github.com/okx/pay-2-zk-commitment.git"
keywords = ["crypto", "pay", "SNARK", "plonky2"]
categories = ["pay"]

[workspace.dependencies]
plonky2 = { git = "https://github.com/okx/plonky2", branch = "dev"}
anyhow = { version = "1.0.40", default-features = false }
log = "0.4.17"