[package]
name = "zk-commit-core"
description = "zk commitment core logic"
version = "0.2.0"
authors = [
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
plonky2={workspace=true}
alloy={workspace=true}
serde={workspace=true}
eyre={workspace=true}
anyhow={workspace=true}
log = "0.4.17"


[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
jemallocator = "0.5.0"



