[package]
name = "zk-commit-service"
description = "zk commitment service"
version = "0.2.0"
authors = [
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]


[dependencies]
plonky2={workspace=true}
serde={workspace=true}
serde_json={workspace=true}
thiserror={workspace=true}
ethers={workspace=true}
env_logger={workspace=true}
log={workspace=true}
num-bigint={workspace=true}
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }