[package]
name = "zk-commit-service"
description = "zk commitment service"
version = "0.2.0"
authors = [
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
deafult = []

[dependencies]
zk-commit-core={path="../zk-commit-core"}
plonky2={workspace=true}
serde={workspace=true}
serde_json.workspace = true
thiserror={workspace=true}
alloy={workspace=true}
env_logger={workspace=true}
log={workspace=true}
num-bigint={workspace=true}
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
actix-multipart = "0.6.2"
bincode = "1.3.3"
anyhow={workspace=true}
